# niqta

./: .gitignore  README.md  Z1  Z2  Z2.cpp  Z3  Z3.cpp
src/: main.cpp
week-1/: build.sh
week-1/task-1/: build.sh
week-1/task-1/src/: Z1.cpp
week-1/task-2/: build.sh
week-1/task-3/: build.sh
week-1/task-3/src/: Z3.cpp
week-10/src/: Stack.cpp  main.cpp
week-10/tests/: test.cpp
week-12 /task1/: CMakeLists.txt  Makefile  config.cfg
week-12 /task1/include/: prime_finder.hpp
week-12 /task1/src/: main.cpp  prime_finder.cpp
week-13/: Dockerfile
week-15-16/: run.sh
week-15-16/client/: CMakeLists.txt  Makefile  comp.sh
week-15-16/client/src/: client.cpp
week-15-16/server/: CMakeLists.txt  Makefile
week-15-16/server/src/: server.cpp  server.hpp
week-2/task-1/task1-1/: Makefile  build.sh  run.sh
week-2/task-1/task1-2/: Makefile  build.sh  run.sh
week-2/task-2/task2-1/: Makefile  build.sh  run.sh
week-2/task-2/task2-2/: Makefile  build.sh  run.sh
week-2/task-3/task3-1/: Makefile  build.sh  run.sh
week-2/task-3/task3-2/: Makefile  build.sh  run.sh
week-3/task-1/task1-a/: Makefile
week-3/task-1/task1-b/: Makefile
week-3/task-1/task1-c/: Makefile
week-3/task-2/task2-a/: Makefile
week-3/task-2/task2-b/: Makefile
week-3/task-2/task2-c/: Makefile
week-3/task-3/task3-a/: Makefile
week-3/task-3/task3-b/: Makefile
week-8/: CMakeLists.txt  Makefile
week-8/include/: fibonacci.hpp  logger.hpp
week-8/src/: fibonacci.cpp  logger.cpp  main.cpp
week-9/: Makefile
week-9/src/: fibonacci.cpp
week-9/tests/: fibonacci_test.cpp
(+124 files in other folders)
